--- a/TripGuide/Scenes/Details/ReserveRestaurant/ReserveRestaurant.storyboard
+++ b/TripGuide/Scenes/Details/ReserveRestaurant/ReserveRestaurant.storyboard
@@ -98,7 +98,7 @@
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="friendlyDiets" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jdf-KJ-UrG">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="friendlyDiets" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jdf-KJ-UrG">
                                                 <rect key="frame" x="25" y="257.33333333333337" width="385" height="23"/>
                                                 <fontDescription key="fontDescription" name="SFCompactRounded-Ultralight" family="SF Compact Rounded" pointSize="19"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -113,31 +113,25 @@
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="6H3-yA-eOO">
-                                                <rect key="frame" x="25" y="335.66666666666663" width="385" height="103"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="XEB-bT-lZR">
+                                                <rect key="frame" x="25" y="333" width="380" height="24"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Food" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IEV-oE-cz0">
-                                                        <rect key="frame" x="0.0" y="0.0" width="50" height="27.666666666666668"/>
-                                                        <fontDescription key="fontDescription" name="SFCompactRounded-Ultralight" family="SF Compact Rounded" pointSize="23"/>
-                                                        <color key="textColor" systemColor="systemBackgroundColor"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="190" height="24"/>
+                                                        <fontDescription key="fontDescription" name="SFCompactRounded-Ultralight" family="SF Compact Rounded" pointSize="20"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Service" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n0X-NB-ryE">
-                                                        <rect key="frame" x="0.0" y="37.666666666666742" width="74" height="27.666666666666671"/>
-                                                        <fontDescription key="fontDescription" name="SFCompactRounded-Ultralight" family="SF Compact Rounded" pointSize="23"/>
-                                                        <color key="textColor" systemColor="systemBackgroundColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ooU-Zy-OFx">
-                                                        <rect key="frame" x="0.0" y="75.333333333333371" width="55" height="27.666666666666671"/>
-                                                        <fontDescription key="fontDescription" name="SFCompactRounded-Ultralight" family="SF Compact Rounded" pointSize="23"/>
-                                                        <color key="textColor" systemColor="systemBackgroundColor"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Service" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n0X-NB-ryE">
+                                                        <rect key="frame" x="190" y="0.0" width="190" height="24"/>
+                                                        <fontDescription key="fontDescription" name="SFCompactRounded-Ultralight" family="SF Compact Rounded" pointSize="20"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Average Rate : " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j7H-Oz-ykQ">
-                                                <rect key="frame" x="20" y="448.66666666666663" width="390" height="22.333333333333314"/>
+                                                <rect key="frame" x="20" y="433.66666666666663" width="390" height="22.333333333333314"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="22.333333333333314" id="hgB-Fc-k6Z"/>
                                                 </constraints>
@@ -146,7 +140,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r61-RB-y1t">
-                                                <rect key="frame" x="20" y="478.33333333333337" width="390" height="30"/>
+                                                <rect key="frame" x="20" y="463.33333333333337" width="390" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="ges-ka-x9S"/>
                                                 </constraints>
@@ -155,7 +149,10 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lLB-TY-JTa">
-                                                <rect key="frame" x="100" y="518.33333333333337" width="230" height="55"/>
+                                                <rect key="frame" x="100" y="513.33333333333337" width="230" height="60"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="60" id="2NK-2f-0Mj"/>
+                                                </constraints>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Add To Favourites">
                                                     <fontDescription key="titleFontDescription" name="ArialMT" family="Arial" pointSize="17"/>
@@ -164,25 +161,31 @@
                                                     <action selector="didTapReserveTable:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="tgN-D3-JGY"/>
                                                 </connections>
                                             </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ooU-Zy-OFx">
+                                                <rect key="frame" x="25" y="367" width="380" height="51.666666666666686"/>
+                                                <fontDescription key="fontDescription" name="SFCompactRounded-Ultralight" family="SF Compact Rounded" pointSize="20"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemPinkColor"/>
                                         <constraints>
                                             <constraint firstItem="lLB-TY-JTa" firstAttribute="leading" secondItem="JBe-TN-CtN" secondAttribute="leading" constant="100" id="11M-Ju-wwV"/>
-                                            <constraint firstItem="j7H-Oz-ykQ" firstAttribute="top" secondItem="6H3-yA-eOO" secondAttribute="bottom" constant="10" id="1mZ-vt-oN3"/>
+                                            <constraint firstAttribute="trailing" secondItem="ooU-Zy-OFx" secondAttribute="trailing" constant="25" id="1gM-f6-z46"/>
                                             <constraint firstAttribute="trailing" secondItem="j7H-Oz-ykQ" secondAttribute="trailing" constant="20" id="1ub-EE-pfX"/>
                                             <constraint firstItem="lGh-Xf-EEf" firstAttribute="trailing" secondItem="hGc-hc-gp7" secondAttribute="trailing" id="4Ik-zv-bDz"/>
                                             <constraint firstItem="lGh-Xf-EEf" firstAttribute="top" secondItem="hGc-hc-gp7" secondAttribute="bottom" constant="15" id="52d-9h-q6l"/>
+                                            <constraint firstItem="lLB-TY-JTa" firstAttribute="top" secondItem="r61-RB-y1t" secondAttribute="bottom" constant="20" id="5IL-pq-EkD"/>
                                             <constraint firstItem="j7H-Oz-ykQ" firstAttribute="leading" secondItem="JBe-TN-CtN" secondAttribute="leading" constant="20" id="73V-As-LkN"/>
                                             <constraint firstItem="jdf-KJ-UrG" firstAttribute="top" secondItem="nRX-YS-CSx" secondAttribute="bottom" constant="12" id="7fK-z9-Qk0"/>
                                             <constraint firstItem="jdf-KJ-UrG" firstAttribute="trailing" secondItem="aQA-CM-a6q" secondAttribute="trailing" id="AGo-ga-C7Z"/>
+                                            <constraint firstAttribute="trailing" secondItem="XEB-bT-lZR" secondAttribute="trailing" constant="25" id="AeB-Yo-mII"/>
                                             <constraint firstItem="lGh-Xf-EEf" firstAttribute="leading" secondItem="hGc-hc-gp7" secondAttribute="leading" id="FMH-E4-wM5"/>
                                             <constraint firstItem="G8d-Hp-e5k" firstAttribute="trailing" secondItem="yWj-s9-9HR" secondAttribute="trailing" id="Gbf-2S-Q1e"/>
                                             <constraint firstAttribute="trailing" secondItem="lLB-TY-JTa" secondAttribute="trailing" constant="100" id="HGU-M8-1AV"/>
                                             <constraint firstItem="hGc-hc-gp7" firstAttribute="top" secondItem="JBe-TN-CtN" secondAttribute="top" constant="30" id="HVL-L8-u0D"/>
                                             <constraint firstItem="aQA-CM-a6q" firstAttribute="leading" secondItem="JBe-TN-CtN" secondAttribute="leading" constant="25" id="KEV-Vq-Bne"/>
                                             <constraint firstItem="hGc-hc-gp7" firstAttribute="leading" secondItem="JBe-TN-CtN" secondAttribute="leading" constant="20" id="KQX-2F-UBn"/>
-                                            <constraint firstItem="lLB-TY-JTa" firstAttribute="top" secondItem="r61-RB-y1t" secondAttribute="bottom" constant="10" id="Ldk-Nw-IBO"/>
-                                            <constraint firstItem="6H3-yA-eOO" firstAttribute="top" secondItem="G8d-Hp-e5k" secondAttribute="bottom" constant="10" id="Ljl-po-JWK"/>
                                             <constraint firstItem="yWj-s9-9HR" firstAttribute="top" secondItem="lGh-Xf-EEf" secondAttribute="bottom" constant="10" id="Scs-K3-feN"/>
                                             <constraint firstItem="r61-RB-y1t" firstAttribute="trailing" secondItem="j7H-Oz-ykQ" secondAttribute="trailing" id="TjV-kW-XbQ"/>
                                             <constraint firstItem="r61-RB-y1t" firstAttribute="top" secondItem="j7H-Oz-ykQ" secondAttribute="bottom" constant="7.3333333333333144" id="UOj-fZ-zee"/>
@@ -193,18 +196,21 @@
                                             <constraint firstItem="nRX-YS-CSx" firstAttribute="top" secondItem="aQA-CM-a6q" secondAttribute="bottom" constant="10" id="Zym-GC-UWV"/>
                                             <constraint firstItem="yWj-s9-9HR" firstAttribute="leading" secondItem="hGc-hc-gp7" secondAttribute="leading" id="aFu-2P-jlj"/>
                                             <constraint firstItem="cBp-Tu-Mq9" firstAttribute="leading" secondItem="lGh-Xf-EEf" secondAttribute="leading" id="b8X-vr-Rqw"/>
+                                            <constraint firstItem="j7H-Oz-ykQ" firstAttribute="top" secondItem="ooU-Zy-OFx" secondAttribute="bottom" constant="15" id="bPG-Ri-P6A"/>
                                             <constraint firstItem="cBp-Tu-Mq9" firstAttribute="top" secondItem="yWj-s9-9HR" secondAttribute="bottom" constant="12" id="cMP-1g-33d"/>
+                                            <constraint firstItem="XEB-bT-lZR" firstAttribute="top" secondItem="G8d-Hp-e5k" secondAttribute="bottom" constant="7.3333333333333144" id="ds7-rb-e0q"/>
                                             <constraint firstItem="cBp-Tu-Mq9" firstAttribute="trailing" secondItem="lGh-Xf-EEf" secondAttribute="trailing" id="e5y-x0-57D"/>
                                             <constraint firstItem="G8d-Hp-e5k" firstAttribute="leading" secondItem="yWj-s9-9HR" secondAttribute="leading" id="eRd-wf-wZa"/>
                                             <constraint firstAttribute="trailing" secondItem="aQA-CM-a6q" secondAttribute="trailing" constant="20" id="g8N-54-zhy"/>
+                                            <constraint firstItem="ooU-Zy-OFx" firstAttribute="top" secondItem="XEB-bT-lZR" secondAttribute="bottom" constant="10" id="haP-Mf-21e"/>
+                                            <constraint firstItem="XEB-bT-lZR" firstAttribute="leading" secondItem="JBe-TN-CtN" secondAttribute="leading" constant="25" id="jFQ-VH-i0A"/>
                                             <constraint firstItem="nRX-YS-CSx" firstAttribute="trailing" secondItem="cBp-Tu-Mq9" secondAttribute="trailing" id="kUc-8C-Kr4"/>
+                                            <constraint firstItem="ooU-Zy-OFx" firstAttribute="leading" secondItem="JBe-TN-CtN" secondAttribute="leading" constant="25" id="ozX-Dd-0dv"/>
                                             <constraint firstItem="yWj-s9-9HR" firstAttribute="trailing" secondItem="hGc-hc-gp7" secondAttribute="trailing" id="qDz-tl-Z2C"/>
                                             <constraint firstItem="jdf-KJ-UrG" firstAttribute="leading" secondItem="aQA-CM-a6q" secondAttribute="leading" id="sEN-wx-Koz"/>
                                             <constraint firstItem="aQA-CM-a6q" firstAttribute="top" secondItem="cBp-Tu-Mq9" secondAttribute="bottom" constant="10" id="u7F-WO-ufW"/>
                                             <constraint firstItem="nRX-YS-CSx" firstAttribute="leading" secondItem="cBp-Tu-Mq9" secondAttribute="leading" id="vd6-h8-iTZ"/>
                                             <constraint firstAttribute="trailing" secondItem="hGc-hc-gp7" secondAttribute="trailing" constant="20" id="x1Q-Yy-Bkh"/>
-                                            <constraint firstItem="6H3-yA-eOO" firstAttribute="trailing" secondItem="jdf-KJ-UrG" secondAttribute="trailing" id="xBU-hE-tGM"/>
-                                            <constraint firstItem="6H3-yA-eOO" firstAttribute="leading" secondItem="jdf-KJ-UrG" secondAttribute="leading" id="ztj-I4-GBg"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -254,9 +260,6 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
